--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
+		"name": "Site1",
 		"logo": "images/Frtitlu.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="HOME">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="HOME.html" data-home-page-title="HOME" class="u-body u-overlap"><header class="u-clearfix u-header u-header" id="sec-2907"><div class="u-clearfix u-sheet u-sheet-1">
@@ -328,7 +329,7 @@
       </div>
     </section>
     <style class="u-overlap-style">.u-overlap:not(.u-sticky-scroll) .u-header {
-background-color: #808080 !important
+background-color: #000000 !important
 }</style>
     
     
